# IVPSolverLib

./: .gitignore  CMakeLists.txt  README.md  main.cpp  plotter.py  printnorms.py
odesolver/: odedetail.tpp  odesolver.hpp  utils.hpp
structures/: alignedbuffer.hpp  span.hpp
